// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoEditing movePhoto should be handled 1`] = `
Object {
  "project": Object {
    "canvas": Object {
      "height": 10,
      "width": 5,
    },
    "id": "TEST",
    "image": Object {
      "height": 100,
      "src": "none",
      "width": 50,
    },
    "matrix": Object {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": -5,
      "f": -3,
    },
  },
}
`;

exports[`PhotoEditing scalePhoto should be handled 1`] = `
Object {
  "project": Object {
    "canvas": Object {
      "height": 10,
      "width": 5,
    },
    "id": "TEST",
    "image": Object {
      "height": 100,
      "src": "none",
      "width": 50,
    },
    "matrix": Object {
      "a": 2,
      "b": 0,
      "c": 0,
      "d": 2,
      "e": -2.5,
      "f": -5,
    },
  },
}
`;
